// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`rolldown > test/fixtures/basic.tsx > dev = false > compiler = babel 1`] = `
"// basic.js
import { template } from "@solidjs/web";
const Foo = (/* @__PURE__ */ template(\`<div>Hello World\`))();
//#endregion
export { Foo as default };
"
`;

exports[`rolldown > test/fixtures/basic.tsx > dev = false > compiler = native 1`] = `
"// basic.js
import { template } from "@solidjs/web";
const Foo = (/* @__PURE__ */ template(\`<div>Hello World\`))();
//#endregion
export { Foo as default };
"
`;

exports[`rolldown > test/fixtures/basic.tsx > dev = true > compiler = babel 1`] = `
"// basic.js
import { template } from "@solidjs/web";
const Foo = (/* @__PURE__ */ template(\`<div>Hello World\`))();
//#endregion
export { Foo as default };
"
`;

exports[`rolldown > test/fixtures/basic.tsx > dev = true > compiler = native 1`] = `
"// basic.js
import { template } from "@solidjs/web";
const Foo = (/* @__PURE__ */ template(\`<div>Hello World\`))();
//#endregion
export { Foo as default };
"
`;

exports[`rolldown > test/fixtures/syntax.tsx > dev = false > compiler = babel 1`] = `
"// syntax.js
import { createComponent, delegateEvents, template } from "@solidjs/web";
import { Loading, createEffect, createSignal, onCleanup, onSettled } from "solid-js";
//#region test/fixtures/syntax.tsx
var _tmpl$ = /*#__PURE__*/ template(\`<button>+\`);
function Foo(props) {
	const [count, setCount] = createSignal(0);
	onSettled(() => {
		console.log("mounted");
		onCleanup(() => {
			console.log("unmounted");
		});
	});
	createEffect(count, (value) => {
		console.log("count:", value);
	});
	return [
		"Children:",
		createComponent(Loading, {
			fallback: "loading...",
			get children() {
				return props.children;
			}
		}),
		(() => {
			var _el$ = _tmpl$();
			_el$._$$click = () => setCount(count() + 1);
			return _el$;
		})()
	];
}
delegateEvents(["click"]);
//#endregion
export { Foo as default };
"
`;

exports[`rolldown > test/fixtures/syntax.tsx > dev = false > compiler = native 1`] = `
"// syntax.js
import { createComponent, delegateEvents, template } from "@solidjs/web";
import { Loading, createEffect, createSignal, onCleanup, onSettled } from "solid-js";
//#region test/fixtures/syntax.tsx
var _tmpl$ = /* @__PURE__ */ template(\`<button>+\`);
function Foo(props) {
	const [count, setCount] = createSignal(0);
	onSettled(() => {
		console.log("mounted");
		onCleanup(() => {
			console.log("unmounted");
		});
	});
	createEffect(count, (value) => {
		console.log("count:", value);
	});
	return [
		"Children:",
		createComponent(Loading, {
			fallback: "loading...",
			get children() {
				return props.children;
			}
		}),
		(() => {
			var _el$ = _tmpl$();
			_el$._$$click = () => setCount(count() + 1);
			return _el$;
		})()
	];
}
delegateEvents(["click"]);
//#endregion
export { Foo as default };
"
`;

exports[`rolldown > test/fixtures/syntax.tsx > dev = true > compiler = babel 1`] = `
"// syntax.js
import { createComponent, delegateEvents, template } from "@solidjs/web";
import { Loading, createEffect, createSignal, onCleanup, onSettled } from "solid-js";
//#region test/fixtures/syntax.tsx
var _tmpl$ = /*#__PURE__*/ template(\`<button>+\`);
function Foo(props) {
	const [count, setCount] = createSignal(0);
	onSettled(() => {
		console.log("mounted");
		onCleanup(() => {
			console.log("unmounted");
		});
	});
	createEffect(count, (value) => {
		console.log("count:", value);
	});
	return [
		"Children:",
		createComponent(Loading, {
			fallback: "loading...",
			get children() {
				return props.children;
			}
		}, "Loading"),
		(() => {
			var _el$ = _tmpl$();
			_el$._$$click = () => setCount(count() + 1);
			return _el$;
		})()
	];
}
delegateEvents(["click"]);
//#endregion
export { Foo as default };
"
`;

exports[`rolldown > test/fixtures/syntax.tsx > dev = true > compiler = native 1`] = `
"// syntax.js
import { createComponent, delegateEvents, template } from "@solidjs/web";
import { Loading, createEffect, createSignal, onCleanup, onSettled } from "solid-js";
//#region test/fixtures/syntax.tsx
var _tmpl$ = /* @__PURE__ */ template(\`<button>+\`);
function Foo(props) {
	const [count, setCount] = createSignal(0);
	onSettled(() => {
		console.log("mounted");
		onCleanup(() => {
			console.log("unmounted");
		});
	});
	createEffect(count, (value) => {
		console.log("count:", value);
	});
	return [
		"Children:",
		createComponent(Loading, {
			fallback: "loading...",
			get children() {
				return props.children;
			}
		}, "Loading"),
		(() => {
			var _el$ = _tmpl$();
			_el$._$$click = () => setCount(count() + 1);
			return _el$;
		})()
	];
}
delegateEvents(["click"]);
//#endregion
export { Foo as default };
"
`;
